// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__fail-with-no-warn___1r1cn"
  >
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__status___3QRQc"
    >
      fail
    </span>
  </div>
</button>
`;

exports[`Snapshot match 2`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__has-warn___YzGQN"
  >
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__status___3QRQc src-shared-components-SubmissionManagement-ScreeningStatus-___styles__failed___X7OBe"
    >
      fail
    </span>
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__warning___h968p"
    >
      0 
      warning
    </span>
  </div>
</button>
`;

exports[`Snapshot match 3`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__pass-with-no-warn___25xue"
  >
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__status___3QRQc"
    >
      pass
    </span>
  </div>
</button>
`;

exports[`Snapshot match 4`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__has-warn___YzGQN"
  >
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__status___3QRQc src-shared-components-SubmissionManagement-ScreeningStatus-___styles__passed___3GkPg"
    >
      pass
    </span>
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__warning___h968p"
    >
      0 
      warning
    </span>
  </div>
</button>
`;

exports[`Snapshot match 5`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__pending___2wVQ8"
  >
    <span>
      Not yet performed
    </span>
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__warning___h968p"
    >
      0 
      warning
    </span>
  </div>
</button>
`;

exports[`Snapshot match 6`] = `
<button
  onClick={[Function]}
  type="button"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__screening-status___v2q5T src-shared-components-SubmissionManagement-ScreeningStatus-___styles__has-warn___YzGQN"
  >
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__status___3QRQc"
    >
      
    </span>
    <span
      className="src-shared-components-SubmissionManagement-ScreeningStatus-___styles__warning___h968p"
    >
      2 
       warnings
    </span>
  </div>
</button>
`;
